<resources>
    <string name="app_name">Trending Repos</string>
    <string name="no_repos">No repos found</string>
    <string name="repos_failed">Something went wrong\nPlease try again later</string>
</resources>
