<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="test.trendingrepos.repos.ReposViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/refresh_control"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:refreshing="@{viewModel.loading}">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:scrollbars="vertical"
                tools:listitem="@layout/view_repo_item" />

        </android.support.v4.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/empty_text"
            style="@style/EmptyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.emptyText}"
            android:visibility="@{viewModel.empty}"
            tools:text="@string/repos_failed"/>

    </android.support.design.widget.CoordinatorLayout>

</layout>